# job_writer

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DOCKERFILE_EXPLANATION.md  Dockerfile  README.md  RESUME_STORAGE_GUIDE.md  __init__.py  config.json  docker-compose.override.example.yml  docker-compose.yml  langgraph.json  prompts.md  pyproject.toml  pyrightconfig.json  requirements.txt  testing.ipynb  workflow.py
agents/: __init__.py  nodes.py  output_schema.py
classes/: classes.py
job_writing_agent/: langgraph_init.py
job_writing_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
job_writing_agent/classes/: __init__.py
job_writing_agent/nodes/: __init__.py  selfconsistency.py
job_writing_agent/prompts/: __init__.py  templates.py
job_writing_agent/tools/: __init__.py  test_llm.py  test_tavily.py
job_writing_agent/utils/: dspy_job_extract.py  llm_client.py  llm_provider_factory.py
nodes/: initializing.py  research_workflow.py  selfconsistency.py  variations.py
prompts/: templates.py
src/: changes.md
src/job_writing_agent/: __init__.py  __main__.py  run_workflow.py  workflow.py
src/job_writing_agent/agents/: nodes.py  output_schema.py
src/job_writing_agent/classes/: __init__.py  classes.py
src/job_writing_agent/graph/: __init__.py  agent_workflow_graph.py  background_research_subgraph.py  data_loading_subgraph.py
src/job_writing_agent/nodes/: __init__.py  data_loading_workflow.py  graph_interrupt.py  initializing.py  job_description_loader.py  research_workflow.py  resume_loader.py  selfconsistency.py  system_initializer.py  test_workflow.py  validation_helper.py  variations.py
src/job_writing_agent/prompts/: templates.py  test_prompts.py  test_templates.py
src/job_writing_agent/static/: .gitkeep
src/job_writing_agent/tools/: SearchTool.py  __init__.py
src/job_writing_agent/utils/: __init__.py  app_logging.py  application_cli.py  application_cli_interface.py  config.py  config_utils.py  document_processing.py  dspy_job_extract.py  errors.py  llm_client.py  llm_provider_factory.py  result_utils.py  vector_store.py
src/job_writing_agent/utils/app_log/: logging_config.py  logging_decorators.py
src/job_writing_agent/utils/browser_session/errors/: errors.py
src/job_writing_agent/utils/browser_session/src/: playwright_browser.py
src/job_writing_agent/utils/document_loader/: agentql_queries.py
src/job_writing_agent/utils/document_loader/errors/: errors.py
src/job_writing_agent/utils/document_loader/src/: __init__.py  _constants.py  agentql_job_scraper.py  document_loader.py  experiment_models.py  file_document_loader.py  models.py  pdf_document_loader.py  queries.py  run.py  scraper_experiment.py  scrapers.py  test_generics.py  test_web_scrape.py  web_document_loader.py
src/job_writing_agent/utils/document_loader/src/experiment_results/: report_2026-05-02T10-06-45.md  report_2026-05-02T10-31-04.md  results_2026-05-02T09-29-30.json  results_2026-05-02T10-06-45.json  results_2026-05-02T10-31-04.json
src/job_writing_agent/utils/document_loader/src/results/: __init__.py  report_builder.py
src/job_writing_agent/utils/document_loader/src/strategies/: __init__.py  aql_structured.py  aql_with_context.py  base.py  prompt_experimental.py
tests/: test_agentql_job_scraper.py  test_report_builder.py  test_scraper_experiment.py  test_workflow.py
tools/: TavilySearch.py  __init__.py
utils/: config.py  document_processing.py  errors.py  llm_client.py
