[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job_writing_agent"
version = "1.0.0"
description = "This module can run an agent which is capable of running langgraph agent sing tools like tavily search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncer==0.0.8",
    "attrs==25.3.0",
    "authlib==1.6.5",
    "babel==2.17.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.14.2",
    "cachetools==6.2.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colorlog==6.9.0",
    "cryptography==44.0.3",
    "cyclopts==3.24.0",
    "dataclasses-json==0.6.7",
    "dateparser==1.2.2",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.2",
    "dspy==3.0.3",
    "dspy-ai==3.0.3",
    "email-validator==2.3.0",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.3.0",
    "filelock==3.19.1",
    "flatbuffers==25.9.23",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "google-auth==2.41.1",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "grpcio>=1.75.0,<2.0.0",
    "grpcio-tools>=1.75.0,<1.79.0",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.35.3",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "json-repair==0.52.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-rs==0.29.1",
    "jsonschema-specifications==2025.9.1",
    "langchain>=0.3.20,<0.4.0",
    "langchain-agentql>=1.0.0",
    "langchain-cerebras>=0.8.1",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.15,<0.4.0",
    "langchain-ollama>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.4,<0.4.0",
    "langchain-tavily>=0.1.5,<0.2.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langfuse==3.6.1",
    "langgraph>=0.6.0,<1.0.0",
    "langgraph-checkpoint-mongodb>=0.2.2",
    "langgraph-runtime-inmem>=0.20.0,<0.21.0",
    "langgraph-sdk>=0.2.0,<0.3.0",
    "langgraph-store-mongodb>=0.1.1",
    "langmem>=0.0.30",
    "langsmith>=0.6.3",
    "lxml==5.4.0",
    "lxml-html-clean==0.4.3",
    "magicattr==0.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "multidict==6.6.4",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "ollama==0.6.0",
    "openai>=1.68.2,<2.0.0",
    "openevals==0.2.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-exporter-otlp-proto-common==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "orjson>=3.9.7,<3.10.17",
    "ormsgpack>=1.12.0",
    "packaging==25.0",
    "playwright==1.55.0",
    "protobuf==6.32.1",
    "propcache==0.4.0",
    "psutil==7.1.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.11.0",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymupdf4llm>=0.0.17",
    "pypdf==6.1.1",
    "pyperclip==1.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-ulid==3.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "regex==2025.9.18",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.1.0",
    "rich-rst==1.3.1",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "tenacity==9.1.2",
    "tiktoken==0.11.0",
    "tld==0.13.1",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "truststore==0.10.4",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "xxhash==3.6.0",
    "yarl==1.21.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "pytest>=7,<9",
    "ruff>=0.14.10",
    "types-protobuf==6.32.1.20250918",
]
mlflow-experiments = [
    "databricks-sdk==0.67.0",
    "mlflow==3.4.0",
    "mlflow-skinny==3.4.0",
    "mlflow-tracing==3.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 80
