[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job_writing_agent"
version = "1.0.0"
description = "This module can run an agent which is capable of running langgraph agent sing tools like tavily search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentql>=1.0.0",
    "aiofiles==24.1.0",
    "aiohttp==3.12.15",
    "beautifulsoup4==4.14.2",
    "black>=25.12.0",
    "blinker==1.9.0",
    "blockbuster==1.5.25",
    "bs4==0.0.2",
    "cachetools==6.2.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "chroma>=0.2.0",
    "chromadb>=1.4.1",
    "click==8.3.0",
    "click-default-group==1.2.4",
    "cloudpickle==3.1.1",
    "dspy==3.0.3",
    "dspy-ai==3.0.3",
    "google-auth==2.41.1",
    "googleapis-common-protos==1.70.0",
    "grpcio>=1.75.0,<2.0.0",
    "html2text==2025.4.15",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "langchain>=1.0.0",
    "langchain-cerebras>=0.8.1",
    "langchain-community>=0.3.17",
    "langchain-core>=1.0.0",
    "langchain-ollama",
    "langchain-openai",
    "langchain-tavily",
    "langchain-text-splitters",
    "langchain-voyageai>=0.3.2",
    "langfuse==3.6.1",
    "langgraph",
    "langgraph-api",
    "langgraph-checkpoint-mongodb>=0.2.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli",
    "langgraph-prebuilt",
    "langchain-tavily>=0.1.5",
    "langchain-text-splitters>=1.0.0",
    "langfuse==3.6.1",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-mongodb>=0.2.2",
    "langgraph-runtime-inmem>=0.20.0,<0.21.0",
    "langgraph-sdk",
    "langgraph-store-mongodb>=0.1.1",
    "langmem>=0.0.30",
    "langsmith>=0.6.3",
    "Deprecated>=1.3.0",
    "lazy-object-proxy==1.12.0",
    "litellm==1.77.7",
    "livekit==1.0.13",
    "livekit-agents==1.2.14",
    "livekit-api==1.0.6",
    "livekit-blingfire==1.0.0",
    "livekit-plugins-cartesia==1.2.14",
    "livekit-plugins-openai==1.2.14",
    "livekit-plugins-silero==1.2.14",
    "livekit-protocol==1.0.7",
    "llm==0.27.1",
    "llm-openrouter==0.5",
    "lxml==5.4.0",
    "lxml-html-clean==0.4.3",
    "ollama==0.6.0",
    "openai>=1.68.2,<2.0.0",
    "openevals==0.2.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "orjson>=3.9.7,<3.10.17",
    "ormsgpack>=1.12.0",
    "playwright==1.55.0",
    "protobuf==6.32.1",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "pymupdf4llm>=0.0.17",
    "pypdf==6.1.1",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "tenacity==9.1.2",
    "tiktoken==0.11.0",
    "typing-extensions==4.15.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "pytest>=7,<9",
    "ruff>=0.14.10",
    "types-protobuf==6.32.1.20250918",
]
mlflow-experiments = [
    "databricks-sdk==0.67.0",
    "mlflow==3.4.0",
    "mlflow-skinny==3.4.0",
    "mlflow-tracing==3.4.0",
]
vector-store = [
    "pinecone>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poe.tasks]
clean = "powershell -Command \"Get-ChildItem -Recurse -Directory -Filter '__pycache__' | Remove-Item -Recurse -Force\""